start work on GUI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,6 @@
 name = "cachecache"
 version = "0.1.0"
 edition = "2021"
+
+[dependencies]
+gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
