--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,9 +21,9 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: docker.io/library/alpine:latest
-          options: -v ${{ github.workspace }}:/root/work
+          options: -v ${{ github.workspace }}:/repo
           run: |
-            cd ./work
+            cd /repo
             apk add gtk4.0-dev cargo
             cargo build --release
       - name: Upload built binary.
